add header template

--- a/doc/2019-05-20.md
+++ b/doc/2019-05-20.md
@@ -6,7 +6,7 @@
 - 
 - 
 - 
-# 采坑记录
+# 踩坑记录
 - 必须添加babel，才能用es6的语法，如export default
 - ReactDOM.render(<App />, document.getElementById('root')); 到这一句
     - 必须import React from 'react';
